--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,15 @@ web:
     - db
   volumes:
     - .:/code
+
+phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    restart: always
+    ports:
+     - 8080:80
+    links:
+      - db
+
 db:
   image: "mysql:5"
   volumes:
